# backend-take-home

./: .coverage  .pre-commit-config.yaml  main.py  pyproject.toml
src/schema/: isa_allowance.py
src/service/: isa_allowance.py
tests/: test_multiple_isas_with_multiple_flexibility.py  test_simple_flexible_isa_allowance.py  test_simple_lifetime_isa.py  test_simple_non_flexible_isa_allowance.py
tests/errors/: test_errors.py
tests/integration_tests/: test_combined_isa_and_lisa.py  test_custom_isa.py  test_isas_with_multiple_flexibility.py  test_simple_flexible_isa_allowance.py  test_simple_lifetime_isa.py  test_simple_non_flexible_isa_allowance.py
